--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "knighthacks",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "http": "^0.0.1-security",
+    "mongodb": "^6.9.0",
+    "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
