--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "framer-motion": "^11.11.1",
     "http": "^0.0.1-security",
     "mongodb": "^6.9.0",
     "next": "14.2.14",
