--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=16.x"
+    "node": "22.3.x"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
